fix: deprecation warnings for URL